--- a/src/scss/layout/_characters.scss
+++ b/src/scss/layout/_characters.scss
@@ -4,7 +4,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 70px 25px 40px 25px;
+  padding: 70px 25px 120px 25px;
   @media all and (min-width: 768px) {
     width: 65vw;
     padding: 70px 25px 110px 25px;
